--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -30,21 +30,26 @@
         justify-content: space-between;
         overflow-x: hidden;
         border-top: 1px solid #ddd;
-        height: 100vh;
+        // height: 100vh;
+
+        // .grid {
+        //     width: calc(100% - 22px);
+        //     height: calc(100% - 22px);
+        //     overflow: auto;
+        //     // margin: 10px;
+        //     border: 1px solid grey;
+        // }
+
+        // .innerGridContainer {
+        //     width: 3000px;
+        //     height: 3000px;
+        //     overflow: hidden;
+        //     background-color: #eaeaea;
+        // }
 
         .grid {
-            width: calc(100% - 22px);
-            height: calc(100% - 22px);
-            overflow: auto;
-            // margin: 10px;
-            border: 1px solid grey;
-        }
-
-        .innerGridContainer {
-            width: 3000px;
-            height: 3000px;
-            overflow: hidden;
-            background-color: #eaeaea;
+            overflow-x: scroll;
+            background-color: #eee;
         }
 
         ::-webkit-scrollbar {
