--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -30,27 +30,28 @@
         justify-content: space-between;
         overflow-x: hidden;
         border-top: 1px solid #ddd;
-        // height: 100vh;
+        height: 100vh;
+        overflow: auto;
 
-        // .grid {
-        //     width: calc(100% - 22px);
-        //     height: calc(100% - 22px);
-        //     overflow: auto;
-        //     // margin: 10px;
-        //     border: 1px solid grey;
-        // }
-
-        // .innerGridContainer {
-        //     width: 3000px;
-        //     height: 3000px;
-        //     overflow: hidden;
-        //     background-color: #eaeaea;
-        // }
+        .innerGridContainer {
+            width: 3000px;
+            height: 3000px;
+            overflow: hidden;
+            // background-color: #eaeaea;
+        }
 
         .grid {
-            overflow-x: scroll;
-            background-color: #eee;
+            width: 100%;
+            height: 100vh;
+            overflow: auto;
+            // margin: 10px;
+            // border: 1px solid grey;
         }
+
+        // .grid {
+        //     overflow-x: scroll;
+        //     background-color: #eee;
+        // }
 
         ::-webkit-scrollbar {
             display: none;
