--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -29,21 +29,31 @@
         position: relative;
         justify-content: space-between;
         overflow-x: hidden;
-        border-top: 1px solid #ddd;
-        height: 100vh;
+        // border-top: 1px solid #ddd;
+        // height: 100vh;
         overflow: auto;
 
         .innerGridContainer {
             width: 3000px;
             height: 3000px;
-            overflow: hidden;
+            overflow-y: hidden;
             // background-color: #eaeaea;
+
+            .timelineContainer {
+                position: sticky;
+                background-color: #fff;
+                top: 0;
+                width: 3000px;
+                height: 60px;
+                overflow: hidden;
+                z-index: 2;
+            }
         }
 
         .grid {
             width: 100%;
             height: 100vh;
-            overflow: auto;
+            overflow: hidden;
             // margin: 10px;
             // border: 1px solid grey;
         }
