--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,77 @@
+.head {
+    display: flex;
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+    z-index: 2;
+    border-bottom: 1px solid #ebedee;
+
+    .headSider {
+        flex-shrink: 0;
+        width: 100%;
+        max-width: 295px;
+        border-right: 1px solid #ebedee;
+
+        transition: max-width 0.8s ease;
+        will-change: auto;
+
+        svg {
+            transform: rotate(-90deg);
+        }
+
+        &.open {
+            max-width: 665px;
+
+            svg {
+                transform: rotate(90deg);
+            }
+        }
+
+        .headerSiderFunc {
+            background-color: #ebedee;
+            width: 40px;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            color: #f05729;
+
+            &:hover {
+                background-color: #f5f5f6;
+            }
+        }
+
+        .headerSiderTop {
+            padding-left: 20px;
+            display: flex;
+            justify-content: flex-end;
+            height: 30px;
+            width: 100%;
+            border-bottom: 1px solid #ebedee;
+        }
+
+        .headerSiderBottom {
+            line-height: 1;
+            padding-left: 20px;
+            font-size: 12px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 20px;
+            width: 100%;
+            color: #aeb5bb;
+        }
+    }
+
+    .timelineContainer {
+        top: 0;
+        width: 3000px;
+        overflow: hidden;
+        z-index: 2;
+    }
+}
+
 .main {
     h1 {
         text-align: center;
@@ -5,23 +79,6 @@
 
     * {
         box-sizing: border-box;
-    }
-
-    .head {
-        // margin-left: 200px;
-        display: flex;
-        position: sticky;
-        top: 0;
-        z-index: 3;
-        background-color: #fff;
-
-        .funcs {
-            flex: 0 0 200px;
-        }
-
-        .dates {
-            border-left: 1px solid #aaa;
-        }
     }
 
     .flex {
@@ -35,24 +92,15 @@
 
         .innerGridContainer {
             width: 3000px;
-            height: 3000px;
+            background-color: #ededef;
+            // height: 3000px;
             overflow-y: hidden;
             // background-color: #eaeaea;
-
-            .timelineContainer {
-                position: sticky;
-                background-color: #fff;
-                top: 0;
-                width: 3000px;
-                height: 60px;
-                overflow: hidden;
-                z-index: 2;
-            }
         }
 
         .grid {
             width: 100%;
-            height: 100vh;
+            // height: 100vh;
             overflow: hidden;
             // margin: 10px;
             // border: 1px solid grey;
