--- a/src/components/Sider/Sider.module.scss
+++ b/src/components/Sider/Sider.module.scss
@@ -1,14 +1,13 @@
 .list {
-    width: 200px;
+    width: 100%;
+    max-width: 295px;
     flex-shrink: 0;
     position: relative;
-    transition: 0.3s ease;
-    padding-top: 59px;
-    border-top: 1px solid #ccc;
-    border-right: 1px solid #ccc;
+    transition: max-width 0.8s ease;
+    border-right: 1px solid #ebedee;
 
     &.open {
-        width: 600px;
+        max-width: 665px;
     }
 
     .toggle {
@@ -23,52 +22,12 @@
         height: 30px;
         background-color: #fff;
         border-radius: 5px;
-        border: 1px solid #ccc;
+        border: 1px solid #ebedee;
         transition: transform 0.3s ease;
         z-index: 2;
 
         &:hover {
             transform: scale(0.9);
         }
-    }
-}
-
-.stageItem {
-    &.coreStage {
-        & > .name {
-            font-weight: bold;
-        }
-    }
-
-    .name,
-    .task {
-        min-height: 30px;
-        display: flex;
-        align-items: center;
-        padding-left: 10px;
-        position: relative;
-
-        &:hover {
-            background-color: #eee;
-
-            &:before {
-                content: '';
-                position: absolute;
-                top: 0%;
-                right: 100%;
-                height: 100%;
-                width: 100%;
-                background-color: #eee;
-            }
-        }
-    }
-    .body {
-        padding-left: 10px;
-        min-height: 30px;
-        // background-color: #ccc;
-    }
-
-    .task {
-        color: #aaa;
     }
 }
