--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -25,4 +25,16 @@
         display: flex;
         align-items: center;
     }
+
+    .scalePanel {
+        position: fixed;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        bottom: 10px;
+        right: 10px;
+        background-color: #fff;
+        padding: 10px;
+        border-radius: 5px;
+    }
 }
