--- a/src/components/Sider/ListStageItem/StageItem.module.scss
+++ b/src/components/Sider/ListStageItem/StageItem.module.scss
@@ -1,4 +1,5 @@
 .stageItem {
+    position: relative;
     &.coreStage {
         & > .name {
             font-weight: bold;
@@ -15,6 +16,37 @@
         padding-left: 20px;
         position: relative;
         background-color: #f5f5f6;
+
+        .nameWrap {
+            display: flex;
+            align-items: center;
+
+            .toggleStageCollapse {
+                display: flex;
+                align-items: center;
+                margin-right: 10px;
+                cursor: pointer;
+                border-radius: 5px;
+                width: 18px;
+                height: 18px;
+
+                &.collapsed {
+                    svg {
+                        transform: rotate(-90deg);
+                    }
+                }
+
+                svg {
+                    width: 100%;
+                    height: 100%;
+                }
+
+                &:hover {
+                    background-color: #aeb5bb;
+                    color: #fff;
+                }
+            }
+        }
 
         // duplicates
         .funcs {
