Drag n drop mechanism done

--- a/src/components/Sider/ListStageItem/StageItem.module.scss
+++ b/src/components/Sider/ListStageItem/StageItem.module.scss
@@ -1,8 +1,44 @@
 .stageItem {
     position: relative;
+    box-sizing: border-box;
+
     &.coreStage {
         & > .name {
             font-weight: bold;
+        }
+    }
+
+    .dropZone {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+    }
+
+    .nestDropZone {
+        position: absolute;
+        right: 44px;
+        padding: 2px;
+        top: 4px;
+        width: 36px;
+        height: 22px;
+        background: #fff;
+        // z-index: 2;
+        opacity: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        border: 1px solid transparent;
+
+        &:hover {
+            background-color: red;
+        }
+
+        svg {
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
         }
     }
 
