--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -45,17 +45,55 @@
     .scalePanel {
         position: fixed;
         display: flex;
-        align-items: center;
-        flex-direction: column;
         bottom: 10px;
         right: 10px;
         background-color: #fff;
-        padding: 10px 20px;
+
         border-radius: 5px;
         // width: 115px;
 
-        .scaleSlider {
-            width: 100px;
+        .scaleSliderWrap {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px 15px;
+            user-select: none;
+
+            .scaleSlider {
+                width: 100px;
+            }
+        }
+
+        .scaleControl {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0 5px;
+            color: #aeb5bb;
+            cursor: pointer;
+
+            &:hover {
+                background-color: rgba(246, 154, 127, 0.15);
+            }
+
+            &:active {
+                background-color: rgba(246, 154, 127, 0.45);
+            }
+
+            &:first-child {
+                border-radius: 5px 0 0 5px;
+                border-right: 1px solid #ebedee;
+            }
+
+            &:last-child {
+                border-radius: 0 5px 5px 0;
+                border-left: 1px solid #ebedee;
+            }
+
+            svg {
+                width: 16px;
+                height: 16px;
+            }
         }
 
         .scaleLabel {
