--- a/src/components/Sider/ListTaskItem/ListTaskItem.module.scss
+++ b/src/components/Sider/ListTaskItem/ListTaskItem.module.scss
@@ -8,6 +8,8 @@
     padding-left: 20px;
     position: relative;
     color: #868f98;
+    z-index: 4;
+    cursor: pointer;
 
     .funcs {
         width: 40px;
