WIP: Styling sider with expand

--- a/src/components/Head/Head.module.scss
+++ b/src/components/Head/Head.module.scss
@@ -12,7 +12,7 @@
         max-width: 295px;
         border-right: 1px solid #ebedee;
 
-        transition: max-width 0.8s ease;
+        // transition: max-width 0.8s ease;
         will-change: auto;
 
         svg {
