--- a/src/components/Sider/Sider.module.scss
+++ b/src/components/Sider/Sider.module.scss
@@ -3,7 +3,7 @@
     max-width: 295px;
     flex-shrink: 0;
     position: relative;
-    transition: max-width 0.8s ease;
+    // transition: max-width 0.8s ease;
     border-right: 1px solid #ebedee;
     z-index: 1;
 
