--- a/src/components/Sider/ListStageItem/StageItem.module.scss
+++ b/src/components/Sider/ListStageItem/StageItem.module.scss
@@ -4,7 +4,7 @@
 
     &.coreStage {
         & > .name {
-            font-weight: bold;
+            // font-weight: bold;
         }
     }
 
@@ -44,18 +44,40 @@
 
     .name {
         font-size: 12px;
-        min-height: 30px;
-        height: 30px;
+
         display: flex;
-        align-items: center;
-        justify-content: space-between;
+        // align-items: center;
+        // justify-content: space-between;
         padding-left: 20px;
         position: relative;
         background-color: #f5f5f6;
+        // border-bottom: 1px solid #ebedee;
+
+        .additionalInfo {
+            min-height: 30px;
+            height: 30px;
+            display: none;
+
+            &.additionalInfoOpen {
+                display: flex;
+            }
+
+            .data {
+                border-left: 1px solid #ebedee;
+                padding: 0 12px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
 
         .nameWrap {
             display: flex;
             align-items: center;
+            min-height: 30px;
+            height: 30px;
+            flex-shrink: 0;
+            margin-right: auto;
 
             .nameIcon {
                 margin-right: 2px;
@@ -94,7 +116,7 @@
         // duplicates
         .funcs {
             width: 40px;
-            height: 100%;
+            flex-shrink: 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -119,6 +141,7 @@
             height: 100%;
             width: 100%;
             background-color: #f5f5f6;
+            // border-bottom: 1px solid #ebedee;
         }
 
         &:hover {
