--- a/src/components/Sider/ListStageItem/StageItem.module.scss
+++ b/src/components/Sider/ListStageItem/StageItem.module.scss
@@ -46,12 +46,10 @@
         font-size: 12px;
 
         display: flex;
-        // align-items: center;
-        // justify-content: space-between;
         padding-left: 20px;
         position: relative;
         background-color: #f5f5f6;
-        // border-bottom: 1px solid #ebedee;
+        box-shadow: inset 0px -1px 0px #ebedee;
 
         .additionalInfo {
             min-height: 30px;
@@ -63,6 +61,8 @@
             }
 
             .data {
+                width: 100px;
+                min-width: 100px;
                 border-left: 1px solid #ebedee;
                 padding: 0 12px;
                 display: flex;
