--- a/src/components/Sider/ListStageItem/StageItem.module.scss
+++ b/src/components/Sider/ListStageItem/StageItem.module.scss
@@ -141,7 +141,7 @@
             height: 100%;
             width: 100%;
             background-color: #f5f5f6;
-            // border-bottom: 1px solid #ebedee;
+            box-shadow: inset 0px -1px 0px #ebedee;
         }
 
         &:hover {
